--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/price_engine
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=
+#spring.datasource.password=
+server.port=8081
